src-errormsg/E03-ElementNotList/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E03-ElementNotList/Plutarch.hs:42:26: error: [GHC-83865]
    • Couldn't match type ‘PInteger’ with ‘PList PInteger’
      Expected: Term s (PList PInteger)
        Actual: Term s PInteger
    • In the second argument of ‘(#)’, namely ‘(42 :: Term s PInteger)’
      In the expression: psumIntegers # (42 :: Term s PInteger)
      In an equation for ‘result’:
          result = psumIntegers # (42 :: Term s PInteger)
   |
42 | result = psumIntegers # (42 :: Term s PInteger)
   |                          ^^^^^^^^^^^^^^^^^^^^^
